# NanoscoPy

./: .gitignore  AFMForceRecovery.py  Bias Spectra Heat Map.ipynb  ExploreSXM.ipynb  Herringbone-Lattice_CNN-Classifier.ipynb  Herringbone-Lattice_CNN_Greyscale.ipynb  HerringboneClassifier.ipynb  LICENSE  LabelStmData.ipynb  README.md  RamanAnalysis Demo.ipynb  RamanAnalysis-orig.py  RamanAnalysis.py  STMImageDimensionDistribution.ipynb  Utilities.py  dataIO.py  environment.yml  meta.yml  pyproject.toml  requirements.txt  run.ipynb  run.py  setup.cfg  setup.py  start.ipynb  test.ipynb  test.py
.ipynb_checkpoints/: dataIO-checkpoint.py
ExampleDataFiles/: STM_Au-111_Flat.sxm  STM_Au-111_Terraced.sxm  Sample_Renishaw_Raman_Spec_Graphene.txt  WSe2_0001.mtrx
Examples/: AFM Height Hist Peak Fitting.ipynb  Device IV Demo.ipynb  ExtractFromMtrx.ipynb  ExtractFromMtrxv2.ipynb  Extract_Defect_Dims.ipynb  FIt STM Signals.ipynb  Factorial Experiment Analysis.ipynb  Import and Level Image Using SPMImage Class.ipynb  RamanAnalysis Demo.ipynb  SPIEPy Example.ipynb  STM Web Server API.ipynb  Tutorial.ipynb  psd.ipynb  run.ipynb  run.py  start.ipynb
Examples/.ipynb_checkpoints/: ExploreSXM-checkpoint.ipynb  (+2 more)
NanoscoPy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
nanoscopy/: Utilities.py  __init__.py  utilities.py
nmdr/: Utilities.py
notebooks/: Bias Spectra Heat Map.ipynb  ExploreSTS.ipynb  ExploreSXM.ipynb  ExtractFromMtrx.ipynb  ExtractJPGFromSXM_Gray.ipynb  Herringbone-Lattice_CNN_Greyscale.ipynb  HerringboneClassifier.ipynb  LabelStmData_v2.ipynb  STS_Classifier-1.ipynb
(+52 files in other folders)
