[metadata]
name = NanoscoPy
version = 0.0.2
author = Jesse Thompson, Darian Smalley
author_email = darian.smalley@gmail.com
description = microscopy data processor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/darianSmalley/NanoscoPy
project_urls =
    Bug Tracker = https://github.com/darianSmalley/NanoscoPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
